testdata/while/break-error.lox
var a; break; // error: line 1 at 'break': 'break' can only be used within loops
{
    var a_;
    continue; // error: line 4 at 'continue': 'continue' can only be used within loops
}
